# xunused

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  compile_commands.json  foo.cpp  foo.hpp  main.cpp  matcher.cpp
include/: matcher.h  pch.h  xunused.h
src/: main.cpp  matcher.cpp  xunused.cpp
test/: test.cpp
